--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -283,10 +283,10 @@ can be used to query the typechecker. Here are two that are used very often:
   return the fully evaluated term \texttt{hello}. 
 \end{description}
 
-It can be difficult to figure out the types and normal forms, especially when
-you are just starting to learn Agda. When you are unsure of the type or normal
-form of an expression, first try to predict what it is and then use the
-commands above to test your prediction.
+Since there is no syntactic difference between values, functions, and types in
+Agda, it can be difficult at first to determine what kind of expression you are
+dealing with. If you run into such a situation, try first to predict its type
+and normal form, and then use the commands above to test your prediction.
 
 \subsection{Syntactic differences with Haskell}
 
