--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -1523,7 +1523,7 @@ IsTrue' : Bool → Set
 IsTrue' true   = ⊤
 IsTrue' false  = ⊥
 \end{code}
-This approach often results that are shorter, but less readable.  It
+This approach often results in proofs that are shorter, but less readable.  It
 is also less general, as some types (such as the identity type which
 we will discuss in the next section) can only be defined as a data
 type. Hence we prefer the approach using data types over the one using
