Agda 2.6.1.3 is now on stackage (no more need to specify resolver)

--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -230,7 +230,7 @@ Agda version 2.6.0 or later.
 Assuming you have Stack installed, the following command should install the
 latest release of Agda:
 \begin{verbatim}
-stack install Agda-2.6.1.2 --resolver lts-16.31
+stack install Agda-2.6.1.3
 \end{verbatim}
 This step will take a long time and a lot of memory to complete, and
 use up 4-5 GB of disk space for a fresh install.
