--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -267,7 +267,7 @@ for Haskell. Agda also supports several backends for compilation,
 including a GHC backend and a JavaScript backend. A full ``Hello,
 world'' example for creating an executable from your Agda code can be
 found at
-\hrefu{https://agda.readthedocs.io/en/v2.6.1.2/getting-started/hello-world.html}{agda.readthedocs.io/en/v2.6.1.2/getting-started/hello-world.html}.}
+\hrefu{https://agda.readthedocs.io/en/v2.6.1.3/getting-started/hello-world.html}{agda.readthedocs.io/en/v2.6.1.3/getting-started/hello-world.html}.}
 
 Once you have loaded an Agda file, there is a number of other commands that
 can be used to query the typechecker. Here are two that are used very often:
@@ -431,7 +431,7 @@ definition by evaluating it for several concrete inputs.
 \marginnote{
 \begin{exercise}
 Define the function $\fun{\_*\_} : \Nat → \Nat → \Nat$ for multiplication
-two natural numbers.
+of two natural numbers.
 \end{exercise}
 }
 
