Fix compilation errors

--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -492,7 +492,7 @@ b : Bool
   split on a variable. For example, if you put the cursor in the hole
   in the definition of \fun{not} and press \texttt{Ctrl+c Ctrl+c},
   Agda will prompt us for a variable to split on. You can then
-  enter the name \var{x} of the variable and press \texttt{enter},
+  enter the name $\var{x}$ of the variable and press \texttt{enter},
   giving us the following result:
 \begin{code}[hide]
 module ThrowAway2 where
@@ -1083,7 +1083,7 @@ module LookupVec1 where
 \end{code}
 Notice that the length $n$ of the vector is also used as the upper
 bound for the index: this way we enforce that the index really is in
-range of the vector. We then split on the vector \var{xs} using \texttt{Ctrl+c Ctrl+c}:
+range of the vector. We then split on the vector $\var{xs}$ using \texttt{Ctrl+c Ctrl+c}:
 \begin{code}[hide]
 module LookupVec2 where
 \end{code}
