Sidenote on writing programs interactively

--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -537,6 +537,13 @@ not  false  = true
 
 \end{description}
 
+\marginnote{\paragraph{Writing programs interactively.} When starting
+out with Agda, it may feel easier to not use the interactive commands
+and instead write the program directly. However, once the types of
+your program become more complex, it becomes much more difficult to
+write down the definition directly and you will need to rely more and
+more on these interactive commands. So it is a good idea to get some
+experience with these commands by using them as often as possible.}
 
 
 You can get a full overview of all available commands by pressing
