Fix formula spacing

--- a/agda.lagda.tex
+++ b/agda.lagda.tex
@@ -1576,7 +1576,7 @@ proof $f$ of ``for all $x$ of type $A$, $P(x)$'' and we have a
 concrete value $v : A$, then we can apply the proof to the case of $v$
 to get a proof $f\ v$ of $P(v)$. So under the Curry-Howard
 correspondence, ``for all $x$ of type $A$, $P(x)$'' corresponds to the
-\emph{dependent function type} $(x : A) → P x$.
+\emph{dependent function type} $(x : A) → P\ x$.
 
 \item[Existential quantification] Next, consider the proposition
 ``there exists a $x : A$ such that $P(x)$''. To prove it, we need to
